; ModuleID = '/home/carl/AnghaBench/lede/package/boot/uboot-oxnas/src/board/ox820/extr_ddr.c_ddr_phy_poll_until_locked.c'
source_filename = "/home/carl/AnghaBench/lede/package/boot/uboot-oxnas/src/board/ox820/extr_ddr.c_ddr_phy_poll_until_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@C_DDR_REG_PHY2 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ddr_phy_poll_until_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ddr_phy_poll_until_locked() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store volatile i32 0, i32* %1, align 4
  store volatile i32 0, i32* %2, align 4
  %3 = load i64, i64* @C_DDR_REG_PHY2, align 8
  %4 = inttoptr i64 %3 to i32*
  %5 = load volatile i32, i32* %4, align 4
  store volatile i32 %5, i32* %1, align 4
  br label %6

6:                                                ; preds = %17, %0
  %7 = load volatile i32, i32* %2, align 4
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %6
  %10 = load i64, i64* @C_DDR_REG_PHY2, align 8
  %11 = inttoptr i64 %10 to i32*
  %12 = load volatile i32, i32* %11, align 4
  store volatile i32 %12, i32* %1, align 4
  %13 = load volatile i32, i32* %1, align 4
  %14 = and i32 %13, -1073741824
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %9
  store volatile i32 1, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %9
  br label %6

18:                                               ; preds = %6
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
